2008-01-24  Lluis Sanchez Gual  <lluis@novell.com>
 
	* glade/XML.custom: due to a recent Mono fix (bug #322762),
	  Type.GetFields does not return private fields from base classes
	  anymore, so the BindFields now has to go through the class
	  hierarchy to get all fields.

2008-01-23  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: update version and tag 2.11.91.

2008-01-22  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: expose an internal ToggleRef prop.
	* glib/Signal.cs: use ToggleRef for lookups instead of Object. Add
	a Free method and release connections and gchandles.
	* glib/ToggleRef.cs: add signal hash and release signals on free.

2008-01-17  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: remove ref from Objects hash prior to releasing it.

2008-01-17  Mike Kestner  <mkestner@novell.com>

	* glib/ToggleRef.cs: check for null reference in IsAlive.

2008-01-17  Mike Kestner  <mkestner@novell.com>

	* generator/Property.cs: missing Parent null check needed for direct
	GLib.Object subclasses.  Suggested by mario@gnome.cl.  [Fixes #321536]
	
2008-01-17  Mike Kestner  <mkestner@novell.com>

	* sample/Assistant.cs: new Gtk.Assistant sample.
	* sample/Makefile.am: hook in new sample.

2008-01-11  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: update version to 2.11.90.
	* configure.in.in: incorporate build service patch.
	* glib/glib-sharp-2.0.pc.in: add cflags for new api.xml.
	* glib/Makefile.am: install api.xml to correct dir.

2008-01-07  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: map "unsigned long" to LPUGen.

2008-01-02  Mike Kestner  <mkestner@novell.com>

	* gtk/MoveFocusHandler.cs: obsolete event types.
	* gtk/TextView.custom: obsolete move-focus signal. 
	* gtk/Window.custom: obsolete move-focus signal. 
	Compat fixes for removal of signals from gtk+ API. [Fixes #350770]

2007-12-17  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl: parse 'typedef struct\n{' properly.
