@@ -1,3 +1,11 @@
+2008-01-29  Mike Kestner  <mkestner@novell.com>
+
+	* generator/VirtualMethod (CName): mangle the name.
+	* generator/SymbolTable.cs (MangleName): add 'remove' and 'foreach'
+	mappings.  Should probably just get a C# keyword list and map all of
+	them instead of onesy twoseys.
+	Fixes for tnymail binding generation.
+
 2008-01-24  Lluis Sanchez Gual  <lluis@novell.com>
  
 	* glade/XML.custom: due to a recent Mono fix (bug #322762),
